...
                child: Padding(
                  padding: const EdgeInsets.symmetric(
                    vertical: Insets.medium,
                    horizontal: Insets.extraLarge,
                  ),
                  child: TextField(
                    key: const Key('enterCode'),
                    focusNode: _focusNode,
                    onChanged: (value) {
                      setState(() => _enteredRoomId = value);
                    },
                    style: theme.textTheme.headline3?.copyWith(
                        color: theme.colorScheme.onTertiaryContainer),
...
        foregroundColor: theme.colorScheme.onPrimary,
        backgroundColor: theme.colorScheme.primary,
      ).copyWith(
        elevation: ButtonStyleButton.allOrNull(0.0),
      ),
      icon: const Icon(Icons.navigate_next_rounded),
      label: const Text('Join'),
    );
  }
}

